# energy_data_windowing

./: PROJECT_PLAN.md  README.md  analysis.ipynb  main.py  pyproject.toml
