[project]
name = "energy-data-windowing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.4.4",
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pyarrow>=21.0.0",
]
